# data_intelligence_crawling

./: .gitignore  Makefile  README_UV.md  pyproject.toml  setup_uv.sh
openspec/changes/add-policies-npc-scraper/: proposal.md  tasks.md
openspec/changes/add-policies-npc-scraper/specs/policies_npc/: spec.md
openspec/specs/: bank_tech_finance.yml  investment_itjuzi.yml  peer_products.yml  policies_finreg.yml  policies_npc.yml
src/: pipeline.py
src/scrapers/: ggjrdn_policies.py  policies_npc.py  zxkc.py
src/services/: google_docs.py
src/storage/: models.py  policies_repository.py
tests/: test_policies_cli.py  test_specs_loadable.py  test_zxkc_scraper.py
tests/fixtures/policies_npc/: detail_page.html  list_page.html
